[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/elements/background_color.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://art/Tree Pieces/Birch/0001.png" type="Texture" id=3]
[ext_resource path="res://scenes/pieces/birch_piece.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/basic_theme_smaller.tres" type="Theme" id=5]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=6]
[ext_resource path="res://art/logo.png" type="Texture" id=7]
[ext_resource path="res://sounds/start_game.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.4, 0.588235, 0.00784314, 0.745098 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.4, 0.588235, 0.00784314, 0.745098 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.588235, 0.00784314, 1 )

[node name="main_menu" type="Node2D"]
script = ExtResource( 6 )

[node name="BackgroundColor" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="BackgroundColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -513.5
margin_right = 288.5
margin_bottom = 513.5
theme = ExtResource( 2 )

[node name="piece" parent="BackgroundColor/Control" instance=ExtResource( 4 )]
position = Vector2( 284, 254 )
scale = Vector2( 8, 8 )

[node name="Logo" type="Sprite" parent="BackgroundColor/Control"]
position = Vector2( 284, 595 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundColor/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -303.0
margin_right = 200.0
theme = ExtResource( 2 )

[node name="PieceTexture" type="TextureRect" parent="BackgroundColor/Control/VBoxContainer"]
visible = false
margin_right = 577.0
margin_bottom = 126.0
texture = ExtResource( 7 )
stretch_mode = 3

[node name="LogoTexture" type="TextureRect" parent="BackgroundColor/Control/VBoxContainer"]
visible = false
margin_right = 577.0
margin_bottom = 126.0
texture = ExtResource( 7 )
stretch_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="BackgroundColor/Control/VBoxContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.5
margin_top = -22.5
margin_right = 0.5
margin_bottom = 136.5
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
bbcode_text = "[center]MERGE
FOREST[/center]"
text = "MERGE
FOREST"
fit_content_height = true

[node name="start_game" type="Button" parent="BackgroundColor/Control/VBoxContainer"]
visible = false
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 5 )

[node name="text" type="RichTextLabel" parent="BackgroundColor/Control/VBoxContainer/start_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -10.0
margin_right = 87.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, 12 )
mouse_filter = 2
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]start game"
text = "start game"

[node name="continue" type="Button" parent="BackgroundColor/Control/VBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 5 )

[node name="text" type="RichTextLabel" parent="BackgroundColor/Control/VBoxContainer/continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -10.0
margin_right = 87.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, 12 )
mouse_filter = 2
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]continue"
text = "continue"

[node name="restart" type="Button" parent="BackgroundColor/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 400.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 5 )

[node name="text" type="RichTextLabel" parent="BackgroundColor/Control/VBoxContainer/restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -10.0
margin_right = 87.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, 12 )
mouse_filter = 2
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]restart"
text = "restart"

[node name="endless_mode" type="Button" parent="BackgroundColor/Control/VBoxContainer"]
visible = false
margin_top = 108.0
margin_right = 400.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )

[node name="text" type="RichTextLabel" parent="BackgroundColor/Control/VBoxContainer/endless_mode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -10.0
margin_right = 87.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, 12 )
mouse_filter = 2
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center][wave]endless mode"
text = "endless mode"

[node name="credits" type="Button" parent="BackgroundColor/Control/VBoxContainer"]
margin_top = 108.0
margin_right = 400.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 5 )

[node name="text" type="RichTextLabel" parent="BackgroundColor/Control/VBoxContainer/credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -10.0
margin_right = 87.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, 12 )
mouse_filter = 2
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]credits"
text = "credits"

[node name="Credits" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Control" type="Control" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -513.5
margin_right = 288.5
margin_bottom = 513.5
theme = ExtResource( 5 )

[node name="piece" parent="Credits/Control" instance=ExtResource( 4 )]
visible = false
position = Vector2( 284, 310 )
scale = Vector2( 10, 10 )

[node name="TextureRect" type="TextureRect" parent="Credits/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -499.5
margin_right = 256.0
margin_bottom = 12.5
texture = ExtResource( 3 )
stretch_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -195.5
margin_right = -96.5
margin_bottom = 4.5
rect_scale = Vector2( 3, 3 )
bbcode_enabled = true
bbcode_text = "[center]a game by
[wave]Tatu Hein채m채ki[/wave]

with audio by
[wave]Aleksi Martikainen[/wave]

and thanks to
[wave]Games Now!, Mom, Sami, Santtu, Aino[/wave][/center]"
text = "a game by
Tatu Hein채m채ki

with audio by
Aleksi Martikainen

and thanks to
Games Now!, Mom, Sami, Santtu, Aino"
fit_content_height = true

[node name="Logo" type="Sprite" parent="Credits/Control"]
position = Vector2( 284, 161 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 7 )

[node name="return" type="Button" parent="Credits/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = 419.5
margin_right = 0.5
margin_bottom = 447.5
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
text = "return"

[node name="start_delay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="BackgroundColor/Control/piece/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BackgroundColor/Control/VBoxContainer/start_game" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="BackgroundColor/Control/VBoxContainer/continue" to="." method="_on_continue_button_down"]
[connection signal="button_down" from="BackgroundColor/Control/VBoxContainer/restart" to="." method="_on_restart_button_down"]
[connection signal="pressed" from="BackgroundColor/Control/VBoxContainer/endless_mode" to="." method="_on_endless_mode_pressed"]
[connection signal="button_down" from="BackgroundColor/Control/VBoxContainer/credits" to="." method="_on_credits_button_down"]
[connection signal="animation_finished" from="Credits/Control/piece/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="Credits/Control/return" to="." method="_on_return_button_down"]
[connection signal="timeout" from="start_delay" to="." method="_on_start_delay_timeout"]

[editable path="BackgroundColor/Control/piece"]
[editable path="Credits/Control/piece"]
